# netinject

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.mts
docs/architecture/: adapters.md  findings.md  index.md  reports.md  sessions.md
docs/cli/: baseline.md  check.md  fuzz.md  init.md  recon.md  regress.md  report.md  run.md  scan.md  sessions.md
docs/config/: adapters.md  auth.md  index.md  pipelines.md  regression.md  scope.md
docs/guide/: getting-started.md  installation.md  quick-start.md
src/: lib.rs  main.rs  ui.rs
src/adapters/: ffuf.rs  httpx.rs  mitmproxy.rs  mod.rs  nuclei.rs  sqlmap.rs
src/auth/: mod.rs
src/baseline/: mod.rs
src/cli/: args.rs  baseline_cmd.rs  check_cmd.rs  fuzz_cmd.rs  helpers.rs  init_cmd.rs  mod.rs  recon_cmd.rs  regress_cmd.rs  replay_cmd.rs  run_cmd.rs  scan_cmd.rs  sessions_cmd.rs
src/config/: mod.rs
src/finding/: mod.rs
src/pipeline/: mod.rs
src/report/: jsonl.rs  markdown.rs  mod.rs  sarif.rs  table.rs
src/scope/: mod.rs
src/session/: mod.rs  store.rs
src/spec/: mod.rs
src/util/: mod.rs
