[package]
name = "netinject"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
globset = "0.4.18"
http = "1.4.0"
indicatif = "0.18.4"
oas3 = "0.21.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = "3.3.0"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
which = "8.0.2"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
